# seL4-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  setup
boot/: CMakeLists.txt  Findboot.cmake
boot/cmake/bootloader/: grub.cmake
boot/cmake/image/: uefi.cmake
boot/configs/: grub.cfg
system/: CMakeLists.txt  Findsystem.cmake  settings.cmake
system/cmake/: settings.cmake
system/cmake/configs/: common.cmake  x86_64.cmake
system/cmake/sel4-wrapper/: CMakeLists.txt  Findsel4_wrapper.cmake
system/configs/: x86_64.cmake
system/core/: CMakeLists.txt  Findsel4_core.cmake
system/projects/root_task/: CMakeLists.txt  Findroot_task.cmake
system/projects/root_task/src/: main.c
